build: added memory retrival
